--- a/fonts.css
+++ b/fonts.css
@@ -28,3 +28,9 @@
    font-weight: normal;
    font-style: normal;
 }
+@font-face {
+   font-family: "Prompt ExtraLight";
+   src: url("fonts/Prompt-ExtraLight.woff2") format("woff2");
+   font-weight: normal;
+   font-style: normal;
+}
